--- a/velero/backup-all-volumes/artifacthub-pkg.yml
+++ b/velero/backup-all-volumes/artifacthub-pkg.yml
@@ -1,37 +1,28 @@
-# This file contains the metadata for the policy package
-# that will be displayed on Artifact Hub
-# Some settings like the verified publisher flag or the ignored packages won't
-# be applied until the next time the repository is processed. Please keep in
-# mind that the repository won't be processed if it has not changed since the
-# last time it was processed. Depending on the repository kind, this is checked
-# in a different way. For Helm http based repositories, we consider it has
-# changed if the `index.yaml` file changes. For git based repositories, it does
-# when the hash of the last commit in the branch you set up changes. This does
-# NOT apply to ownership claim operations, which are processed immediately.
-#
 ---
 name: backup-all-volumes
 version: 1.0.0
 displayName: Backup All Volumes
-createdAt: 2023-03-29T00:00:00.000Z
-description: |
-  This policy backs up all volumes in a namespace.
-readme: |
-  This policy backs up all volumes in a namespace.
-  To use this policy, apply it to the namespace you want to backup.
-# Optional fields
+createdAt: "2023-03-29T00:00:00.000Z"
+description: >-
+      In order for Velero to backup volumes in a Pod using an opt-in approach, it
+      requires an annotation on the Pod called `backup.velero.io/backup-volumes` with the
+      value being a comma-separated list of the volumes mounted to that Pod. This policy
+      automatically annotates Pods (and Pod controllers) which refer to a PVC so that
+      all volumes are listed in the aforementioned annotation if a Namespace with the label
+      `velero-backup-pvc=true`.
+install: |-
+  ### Usage
+    ```shell
+    kubectl apply -f https://raw.githubusercontent.com/kyverno/policies/main/velero/backup-all-volumes/backup-all-volumes.yaml
+    ```
 keywords:
   - velero
-  - backup
-  - volume
   - kyverno
-license: Apache-2.0
-maintainers:
-  - name: Chip Zoller
-    email: chip@nirmata.com
+links:
+  - name: Source
+    url: https://github.com/kyverno/policies/blob/main/velero/backup-all-volumes/backup-all-volumes.yaml
 
-annotations: # (optional, keys and values must be strings)
-  kyverno/categories: "Velero"
-  kyverno/kubernetesVersion: "1.20"
-  kyverno/subject: "Volume"
-  kyverno/version: "1.0.0"
+annotations:
+  kyverno/category: "Velero"
+  kyverno/kubernetesVersion: "1.25"
+  kyverno/subject: "Pod, Annotation"
