--- a/velero/block-velero-restore/artifacthub-pkg.yml
+++ b/velero/block-velero-restore/artifacthub-pkg.yml
@@ -17,26 +17,13 @@ keywords:
   - velero
   - kyverno
 readme: |
-  # Kyverno Policy: Block Velero Restore
-  This repository contains a Kyverno policy package that blocks Velero restores in a Kubernetes cluster. The policy is designed to work with the Kyverno Kubernetes policy management tool.
-  ## Overview
-  The `block-velero-restore` Kyverno policy prevents users from performing Velero restores in the Kubernetes cluster. This policy enforces restrictions on restore operations, ensuring the stability of your application data and the integrity of your cluster.
-  ## Installation
-  To install the `block-velero-restore` Kyverno policy, please apply the Kyverno policy to your cluster:
-  ```bash
-  kubectl apply -f https://raw.githubusercontent.com/kyverno/policies/main/velero/block-velero-restore/block-velero-restore.yaml
-  ```
-  ## Uninstallation
-  To uninstall the `block-velero-restore` Kyverno policy from your cluster, run:
-  ```bash
-  kubectl delete -f https://raw.githubusercontent.com/kyverno/policies/main/velero/block-velero-restore/block-velero-restore.yaml
-  ```
-  ## License
-  This project is licensed under the [Apache License, Version 2.0](https://github.com/kyverno/policies/blob/main/LICENSE).
-  ## Kyverno annotations
+  Velero allows on backup and restore operations and is designed to be run with full cluster admin permissions.
+  It allows on cross namespace restore operations, which means you can restore backup of namespace A to namespace B.
+  This policy protect restore operation into system or any protected namespaces, listed in deny condition section. 
+  It checks the Restore CRD object and its namespaceMapping field. If destination match protected namespace
+  then operation fails and warning message is throw.
+  
   Refer to the documentation for more details on Kyverno annotations: https://artifacthub.io/docs/topics/annotations/kyverno/
-  ## Support
-  If you encounter any issues or need help with this policy, please create an issue in this repository or join the [Kyverno Slack](https://kyverno.io/community/) community for support.
 annotations:
   kyverno/category: "Velero"
   kyverno/kubernetesVersion: "1.23"
