Update readme in artifact-pkg.yml files (#547)
* Update readme in artifact-pkg.yml files

Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

* Update readme including description and annotation in artifact-pkg.yml files

Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

---------

Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

--- a/velero/backup-all-volumes/artifacthub-pkg.yml
+++ b/velero/backup-all-volumes/artifacthub-pkg.yml
@@ -17,6 +17,17 @@ install: |-
 keywords:
   - velero
   - kyverno
+readme: |
+  In order for Velero to backup volumes in a Pod using an opt-in approach, it
+  requires an annotation on the Pod called `backup.velero.io/backup-volumes` with the
+  value being a comma-separated list of the volumes mounted to that Pod. This policy
+  automatically annotates Pods (and Pod controllers) which refer to a PVC so that
+  all volumes are listed in the aforementioned annotation if a Namespace with the label
+  `velero-backup-pvc=true`.
+
+  Refer to the documentation for more details on Kyverno annotations: https://artifacthub.io/docs/topics/annotations/kyverno/
+
+  
 annotations:
   kyverno/category: "Velero"
   kyverno/kubernetesVersion: "1.25"
