--- a/velero/validate-cron-schedule/artifacthub-pkg.yml
+++ b/velero/validate-cron-schedule/artifacthub-pkg.yml
@@ -13,6 +13,11 @@ install: |-
 keywords:
   - velero
   - kyverno
+readme: |
+  A Velero Schedule is given in Cron format and must be accurate to ensure
+  operation. This policy validates that the schedule is a valid Cron format. 
+
+  Refer to the documentation for more details on Kyverno annotations: https://artifacthub.io/docs/topics/annotations/kyverno/
 annotations:
   kyverno/category: "Velero"
   kyverno/kubernetesVersion: "1.25"
