Update all kyverno-test.yaml and change the policy field to use dashes over underscores.
Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

--- a/best-practices/add-network-policy/kyverno-test.yaml
+++ b/best-practices/add-network-policy/kyverno-test.yaml
@@ -1,6 +1,6 @@
 name: deny-all-traffic
 policies:
-  - add_network_policy.yaml
+  - add-network-policy.yaml
 resources:
   - resource.yaml
 results:
