--- a/best-practices/disallow-latest-tag/kyverno-test.yaml
+++ b/best-practices/disallow-latest-tag/kyverno-test.yaml
@@ -1,6 +1,6 @@
-name: disallow_latest_tag
+name: disallow-latest-tag
 policies:
-  - disallow_latest_tag.yaml
+  - disallow-latest-tag.yaml
 resources:
   - resource.yaml
 results:
