--- a/best-practices/require-drop-all/kyverno-test.yaml
+++ b/best-practices/require-drop-all/kyverno-test.yaml
@@ -1,8 +1,8 @@
 # Tests for this policy are covered in a more extensive fashion in the PSS restricted profile
 # in disallow-capabilities-strict.
-name: require_drop_all
+name: require-drop-all
 policies:
-  - require_drop_all.yaml
+  - require-drop-all.yaml
 resources:
   - resource.yaml
 results:
