--- a/other/add-volume-deployment/kyverno-test.yaml
+++ b/other/add-volume-deployment/kyverno-test.yaml
@@ -1,6 +1,6 @@
 name: add-volume
 policies:
-  - add_volume_deployment.yaml
+  - add-volume-deployment.yaml
 resources:
   - resource.yaml
 results:
