--- a/other/ensure-probes-different/kyverno-test.yaml
+++ b/other/ensure-probes-different/kyverno-test.yaml
@@ -1,6 +1,6 @@
 name: validate-probes
 policies:
-  - ensure_probes_different.yaml
+  - ensure-probes-different.yaml
 resources:
   - resource.yaml
 results:
