--- a/other/require-image-checksum/kyverno-test.yaml
+++ b/other/require-image-checksum/kyverno-test.yaml
@@ -1,6 +1,6 @@
 name: require-image-checksum
 policies:
-  -  require_image_checksum.yaml
+  -  require-image-checksum.yaml
 resources:
   -  resource.yaml
 results:
