--- a/other/require-qos-guaranteed/kyverno-test.yaml
+++ b/other/require-qos-guaranteed/kyverno-test.yaml
@@ -1,6 +1,6 @@
 name: require-qos-guaranteed
 policies:
-  - require_qos_guaranteed.yaml
+  - require-qos-guaranteed.yaml
 resources:
   - resource.yaml
 results:
