Update kasten to make sure all Kyverno policies must be in individual folders and all folders contain policies with the same name.
Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

--- a/kasten/k10-immutable-location-profile/kyverno-test.yaml
+++ b/kasten/k10-immutable-location-profile/kyverno-test.yaml
@@ -1,6 +1,6 @@
 name: kyverno_data_protection_tests
 policies:
-  - k10-immutable-backup.yaml
+  - k10-immutable-location-profile.yaml
 resources:
   - immutable-location-profile.yaml
 results:
