--- a/nginx-ingress/nginx-custom-snippets/kyverno-test.yaml
+++ b/nginx-ingress/nginx-custom-snippets/kyverno-test.yaml
@@ -1,6 +1,6 @@
 name: disallow_nginx_custom_snippets
 policies:
-  -  disallow-custom-snippets.yaml
+  -  nginx-custom-snippets.yaml
 resources:
   -  resources.yaml
 results:
