--- a/kasten/k10-minimum-retention/kyverno-test.yaml
+++ b/kasten/k10-minimum-retention/kyverno-test.yaml
@@ -1,11 +1,11 @@
 name: kyverno_data_protection_tests
 policies:
-  - k10-override-minimum-retentions.yaml
+  - k10-minimum-retentions.yaml
 resources:
   - backup-export-policy.yaml
 results:
-- policy: k10-policy-minimum-retention
-  rule: k10-policy-minimum-retention
+- policy: k10-minimum-retention
+  rule: k10-minimum-retention
   resource: hourly-policy
   kind: Policy
   patchedResource: patched.yaml
