--- a/nginx-ingress/nginx-annotation-checks/nginx-annotation-checks.yaml
+++ b/nginx-ingress/nginx-annotation-checks/nginx-annotation-checks.yaml
@@ -1,7 +1,7 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: restrict-annotations
+  name: nginx-annotation-checks
   annotations:
     policies.kyverno.io/title: Restrict NGINX Ingress annotation values 
     policies.kyverno.io/category: Security, NGINX Ingress
