--- a/nginx-ingress/nginx-path-checks/kyverno-test.yaml
+++ b/nginx-ingress/nginx-path-checks/kyverno-test.yaml
@@ -1,6 +1,6 @@
 name: restrict-annotations
 policies:
-  -  restrict-path.yaml
+  -  nginx-path-checks.yaml
 resources:
   -  resources.yaml
 results:
