--- a/openshift/validate-routes/validate-routes.yaml
+++ b/openshift/validate-routes/validate-routes.yaml
@@ -1,7 +1,7 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: check-routes
+  name: validate-routes
   annotations:
     policies.kyverno.io/title: Require TLS routes in OpenShift
     policies.kyverno.io/category: OpenShift
