Update policyname to make sure all folders contain policies with the same name
Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

--- a/nginx-ingress/nginx-annotation-checks/kyverno-test.yaml
+++ b/nginx-ingress/nginx-annotation-checks/kyverno-test.yaml
@@ -1,6 +1,6 @@
 name: restrict-annotations
 policies:
-  -  restrict-annotations.yaml
+  -  nginx-annotation-checks.yaml
 resources:
   -  resources.yaml
 results:
