Update policyname to make sure all folders contain policies with the same name
Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

--- a/nginx-ingress/disallow-ingress-nginx-custom-snippets/disallow-ingress-nginx-custom-snippets.yaml
+++ b/nginx-ingress/disallow-ingress-nginx-custom-snippets/disallow-ingress-nginx-custom-snippets.yaml
@@ -1,7 +1,7 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: nginx-custom-snippets
+  name: disallow-ingress-nginx-custom-snippets
   annotations:
     policies.kyverno.io/title: Disallow Custom Snippets
     policies.kyverno.io/category: Security, NGINX Ingress
