--- a/nginx-ingress/restrict-ingress-paths/kyverno-test.yaml
+++ b/nginx-ingress/restrict-ingress-paths/kyverno-test.yaml
@@ -1,6 +1,6 @@
 name: restrict-annotations
 policies:
-  -  nginx-path-checks.yaml
+  -  restrict-ingress-paths.yaml
 resources:
   -  resources.yaml
 results:
