--- a/pod-security/subrule/podsecurity-subrule-baseline/kyverno-test.yaml
+++ b/pod-security/subrule/podsecurity-subrule-baseline/kyverno-test.yaml
@@ -1,6 +1,6 @@
 name: podsecurity-subrule-baseline
 policies:
-  - baseline.yaml
+  - podsecurity-subrule-baseline.yaml
 resources:
   - resource.yaml
 results:
