--- a/pod-security/subrule/podsecurity-subrule-baseline/podsecurity-subrule-baseline.yaml
+++ b/pod-security/subrule/podsecurity-subrule-baseline/podsecurity-subrule-baseline.yaml
@@ -1,7 +1,7 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: baseline
+  name: podsecurity-subrule-baseline
   annotations:
     policies.kyverno.io/title: Baseline Pod Security Standards
     policies.kyverno.io/category: Pod Security, EKS Best Practices
