--- a/kasten/k10-minimum-retention/kyverno-test.yaml
+++ b/kasten/k10-minimum-retention/kyverno-test.yaml
@@ -1,6 +1,6 @@
 name: kyverno_data_protection_tests
 policies:
-  - k10-minimum-retentions.yaml
+  - k10-minimum-retention.yaml
 resources:
   - backup-export-policy.yaml
 results:
