update README.md, PR template and make sure all folders contain policies with the same name (#554)
* Update the PR template to include a checkbox to remind future contributors about the metadata file.

Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

* Template policy metadata file (artifacthub-pkg.yml) and have instructions on how to add the metadata file and complete its contents.

Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

* Update kasten to make sure all Kyverno policies must be in individual folders and all folders contain policies with the same name.

Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

* Update kasten to make sure all Kyverno policies must be in individual folders and all folders contain policies with the same name.

Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

* Update Artifact hub instructions and tutorials in readme.md and PULL_REQUEST_TEMPLATE.md

Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

* Update folders to make sure all Kyverno policies must be in individual folders and all folders contain policies with the same name.

Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

* Update PULL_REQUEST_TEMPLATE.md and add a checkbox to remind future contributors about the metadata file.

Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

* Update README to include instructions on how to add the metadata file

Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

* Update policyname to make sure all folders contain policies with the same name

Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

* Update policyname to make sure all folders contain policies with the same name

Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

* Update policyname to make sure all folders contain policies with the same name

Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

* Update README to reflect changes

Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

* Update README to reflect changes

Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

* Update README to reflect cha

--- a/nginx-ingress/restrict-ingress-paths/kyverno-test.yaml
+++ b/nginx-ingress/restrict-ingress-paths/kyverno-test.yaml
@@ -1,6 +1,6 @@
 name: restrict-annotations
 policies:
-  -  restrict-path.yaml
+  -  restrict-ingress-paths.yaml
 resources:
   -  resources.yaml
 results:
