Fix pattern in Require aws-node DaemonSet use IRSA
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/aws/require-aws-node-irsa/require-aws-node-irsa.yaml
+++ b/aws/require-aws-node-irsa/require-aws-node-irsa.yaml
@@ -36,4 +36,6 @@ spec:
       message: "Update the aws-node daemonset to use IRSA."
       pattern:
         spec:
-          serviceAccountName: "!aws-node"
+          template:
+            spec:
+              serviceAccountName: "!aws-node"
