add preconditions to Require Pod Probes
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/best-practices/require-probes/require-probes.yaml
+++ b/best-practices/require-probes/require-probes.yaml
@@ -26,6 +26,13 @@ spec:
       - resources:
           kinds:
           - Pod
+    preconditions:
+      all:
+      - key: "{{request.operation || 'BACKGROUND'}}"
+        operator: AnyIn
+        value:
+        - CREATE
+        - UPDATE
     validate:
       message: "Liveness, readiness, or startup probes are required for all containers."
       foreach:
