update Add Default Resources and associated tests
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/add-default-resources/add-default-resources.yaml
+++ b/other/add-default-resources/add-default-resources.yaml
@@ -6,9 +6,9 @@ metadata:
     policies.kyverno.io/title: Add Default Resources
     policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
-    kyverno.io/kyverno-version: 1.6.0
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.10.0-alpha.2
+    policies.kyverno.io/minversion: 1.7.0
+    kyverno.io/kubernetes-version: "1.26"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Pods which don't specify at least resource requests are assigned a QoS class
@@ -33,10 +33,12 @@ spec:
         - CREATE
         - UPDATE
     mutate:
-      patchStrategicMerge:
-        spec:
-          containers:
-            - (name): "*"
+      foreach:
+      - list: "request.object.spec.containers[]"
+        patchStrategicMerge:
+          spec:
+            containers:
+            - (name): "{{element.name}}"
               resources:
                 requests:
                   +(memory): "100Mi"
