--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,31 +35,18 @@ jobs:
       - name: Test Policy
         run: go run ./cmd/cli/kubectl-kyverno test ../policies
         working-directory: kyverno
-
+      
       - name: Validate all policies
         run: |
           #!/bin/bash
-
           set -euo pipefail
-
           # Loop through each policy directory in the repository
           for policy_dir in $(find "$GITHUB_WORKSPACE" -type d -name '*-*'); do
-            # Validate that the folder name contains only dashes as the non-alphanumeric characters
-            if [[ ! $(basename "$policy_dir") =~ ^[a-zA-Z0-9]+(-[a-zA-Z0-9]+)*$ ]]; then
-              echo "Policy folder name in directory $policy_dir contains invalid characters"
-              exit 1
-            fi
-
-            # Validate that each policy file in the directory has the same parent folder name as part of its name
-            policy_files=$(find "$policy_dir" -maxdepth 1 -type f -name '*.yaml')
-            for policy_file in $policy_files; do
-              policy_name=$(basename "$policy_file" .yaml)
-              if [[ ! "$policy_name" =~ ^$(basename "$policy_dir") ]]; then
-                echo "Policy $policy_file in directory $policy_dir does not have the same parent folder name"
-                exit 1
-              fi
-            done
-
+            # # Validate that policy is named the same as the folder
+            # if [[ $(basename "$policy_dir") != $(basename "$(dirname "$policy_dir")") ]]; then
+            #   echo "Policy in directory $policy_dir is not named the same as the folder"
+            #   exit 1
+            # fi
             # Validate that artifacthub-pkg.yml file is found in the same folder as the policy
             if [[ ! -f "$policy_dir/artifacthub-pkg.yml" ]]; then
               echo "artifacthub-pkg.yml file is not found in the same folder as the policy in directory $policy_dir"
