Update workflow to validate all policies according to the contribution guide
Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,16 +40,53 @@ jobs:
         run: |
           #!/bin/bash
           set -euo pipefail
+
+          # Function to validate if the directory has a YAML file with the same name
+          validate_yaml_file() {
+            local dir="$1"
+            local yaml_file="$dir/$(basename "$dir").yaml"
+
+            if [[ ! -f "$yaml_file" ]]; then
+              echo "YAML file $yaml_file is not found in the directory $dir"
+              exit 1
+            fi
+          }
+
           # Loop through each policy directory in the repository
           for policy_dir in $(find "$GITHUB_WORKSPACE" -type d -name '*-*'); do
-            # # Validate that policy is named the same as the folder
-            # if [[ $(basename "$policy_dir") != $(basename "$(dirname "$policy_dir")") ]]; then
-            #   echo "Policy in directory $policy_dir is not named the same as the folder"
-            #   exit 1
-            # fi
+            # Validate that policy is named the same as the folder
+            if [[ $(basename "$policy_dir") != $(basename "$(dirname "$policy_dir")") ]]; then
+              echo "Policy in directory $policy_dir is not named the same as the folder"
+              exit 1
+            fi
             # Validate that artifacthub-pkg.yml file is found in the same folder as the policy
             if [[ ! -f "$policy_dir/artifacthub-pkg.yml" ]]; then
               echo "artifacthub-pkg.yml file is not found in the same folder as the policy in directory $policy_dir"
               exit 1
             fi
+
+            # Check if the directory has a YAML file with the same name
+            validate_yaml_file "$policy_dir"
+
+            # Check if subdirectories have a YAML file with the same name
+            for nested_policy_dir in $(find "$policy_dir" -mindepth 1 -type d); do
+              validate_yaml_file "$nested_policy_dir"
+            done
           done
+
+        # run: |
+        #   #!/bin/bash
+        #   set -euo pipefail
+        #   # Loop through each policy directory in the repository
+        #   for policy_dir in $(find "$GITHUB_WORKSPACE" -type d -name '*-*'); do
+        #     # Validate that policy is named the same as the folder
+        #     if [[ $(basename "$policy_dir") != $(basename "$(dirname "$policy_dir")") ]]; then
+        #       echo "Policy in directory $policy_dir is not named the same as the folder"
+        #       exit 1
+        #     fi
+        #     # Validate that artifacthub-pkg.yml file is found in the same folder as the policy
+        #     if [[ ! -f "$policy_dir/artifacthub-pkg.yml" ]]; then
+        #       echo "artifacthub-pkg.yml file is not found in the same folder as the policy in directory $policy_dir"
+        #       exit 1
+        #     fi
+        #   done
