fix: check for empty namespaceMapping in block-velero-restore
Signed-off-by: Alexandre Desjardins <alexandre.bd@tutanota.com>

--- a/velero/block-velero-restore/block-velero-restore.yaml
+++ b/velero/block-velero-restore/block-velero-restore.yaml
@@ -27,7 +27,7 @@ spec:
       deny:
         conditions:
           any:
-            - key: "{{request.object.spec.namespaceMapping | values(@)}}"
+            - key: "{{request.object.spec.namespaceMapping || `{}` | values(@)}}"
               operator: AnyIn
               value:
               - kube-system
