fix and modernize Add Image as Environment Variable
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/add-image-as-env-var/add-image-as-env-var.yaml
+++ b/other/add-image-as-env-var/add-image-as-env-var.yaml
@@ -2,93 +2,34 @@ apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
   name: add-image-as-env-var
-  # env array needs to exist (least one env var is present)
   annotations:
-    pod-policies.kyverno.io/autogen-controllers: None
+    pod-policies.kyverno.io/autogen-controllers: none
     policies.kyverno.io/title: Add Image as Environment Variable
     policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kyverno-version: 1.6.2
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.10.0-alpha.2
+    kyverno.io/kubernetes-version: "1.26"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       The Kubernetes downward API only has the ability to express so many
       options as environment variables. The image consumed in a Pod is commonly
       needed to make the application aware of some logic it must take. This policy
       takes the value of the `image` field and adds it as an environment variable
-      to bare Pods and Deployments having no more than two containers. The `env` array must already exist for the policy
-      to operate correctly. This policy may be easily extended to support other higher-level
-      Pod controllers as well as more containers by following the established rules.
+      to Pods.
 spec:
-  background: false
-  schemaValidation: false
   rules:
-  # One Pod
-  - name: pod-containers-1-inject-image
+  - name: pod-containers-inject-image
     match:
       any:
       - resources:
           kinds:
           - Pod
-    preconditions:
-      all:
-      - key: "{{request.object.spec.containers[] | length(@)}}"
-        operator: GreaterThanOrEquals
-        value: 1
     mutate:
-      patchesJson6902: |-
-        - op: add
-          path: "/spec/containers/0/env/-"
-          value: {"name":"K8S_IMAGE","value":"{{request.object.spec.containers[0].image}}"}
-  # Two or more Pods
-  - name: pod-containers-2-inject-image
-    match:
-      any:
-      - resources:
-          kinds:
-          - Pod
-    preconditions:
-      all:
-      - key: "{{request.object.spec.containers[] | length(@)}}"
-        operator: GreaterThanOrEquals
-        value: 2
-    mutate:
-      patchesJson6902: |-
-        - op: add
-          path: "/spec/containers/1/env/-"
-          value: {"name":"K8S_IMAGE","value":"{{request.object.spec.containers[1].image}}"}
-  # Deployment with one Pod
-  - name: deploy-containers-1-inject-image
-    match:
-      any:
-      - resources:
-          kinds:
-          - Deployment
-    preconditions:
-      all:
-      - key: "{{request.object.spec.template.spec.containers[] | length(@)}}"
-        operator: GreaterThanOrEquals
-        value: 1
-    mutate:
-      patchesJson6902: |-
-        - op: add
-          path: "/spec/template/spec/containers/0/env/-"
-          value: {"name":"K8S_IMAGE","value":"{{request.object.spec.template.spec.containers[0].image}}"}
-  # Deployment with two or more Pods
-  - name: deploy-containers-2-inject-image
-    match:
-      any:
-      - resources:
-          kinds:
-          - Deployment
-    preconditions:
-      all:
-      - key: "{{request.object.spec.template.spec.containers[] | length(@)}}"
-        operator: GreaterThanOrEquals
-        value: 2
-    mutate:
-      patchesJson6902: |-
-        - op: add
-          path: "/spec/template/spec/containers/1/env/-"
-          value: {"name":"K8S_IMAGE","value":"{{request.object.spec.template.spec.containers[1].image}}"}
+      foreach:
+      - list: request.object.spec.containers[]
+        patchesJson6902: |-
+          - op: add
+            path: /spec/containers/{{elementIndex}}/env/-
+            value:
+              name: K8S_IMAGE
+              value: "{{ element.image }}"
