--- a/other/add-image-as-env-var/resource.yaml
+++ b/other/add-image-as-env-var/resource.yaml
@@ -1,15 +1,34 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: envar-demo
-  labels:
-    purpose: demonstrate-envars
+  name: pod01
 spec:
   containers:
-  - name: envar-demo-container
-    image: gcr.io/google-samples/node-hello:1.0
+  - name: busybox
+    image: quay.io/busybox:1.35
     env:
-    - name: DEMO_GREETING
-      value: "Hello from the environment"
-    - name: DEMO_FAREWELL
-      value: "Such a sweet sorrow"
+    - name: FOO
+      value: bar
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: pod02
+spec:
+  containers:
+  - name: busybox
+    image: ghcr.io/busybox:1.35
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: pod03
+spec:
+  containers:
+  - name: busybox
+    image: docker.io/busybox:1.35
+    env:
+    - name: COLOR
+      value: red
+  - name: nginx
+    image: quay.io/nginxsomefoo:1.1.0
