change formatting of Add prefix to external secret
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/external-secret-operator/add-external-secret-prefix/add-external-secret-prefix.yaml
+++ b/external-secret-operator/add-external-secret-prefix/add-external-secret-prefix.yaml
@@ -3,7 +3,7 @@ kind: ClusterPolicy
 metadata:
   name: add-external-secret-prefix
   annotations:
-    policies.kyverno.io/title: Add prefix to exernal secret
+    policies.kyverno.io/title: Add prefix to external secret
     policies.kyverno.io/category: ExternalSecretOperator
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: ExternalSecret
@@ -32,9 +32,8 @@ spec:
         patchesJson6902: |-
           - path: /spec/data/{{elementIndex}}/remoteRef
             op: add
-            value: {
-              "key" : "prefix-{{element.remoteRef.key}}", 
-              "property": {{element.remoteRef.property}},
-              "conversionStrategy": {{element.remoteRef.conversionStrategy}},
-              "decodingStrategy": {{element.remoteRef.decodingStrategy}}
-            } 
+            value:
+              key: "prefix-{{element.remoteRef.key}}"
+              property: "{{element.remoteRef.property}}"
+              conversionStrategy: "{{element.remoteRef.conversionStrategy}}"
+              decodingStrategy: "{{element.remoteRef.decodingStrategy}}"
