update formatting of Minimum Backup Retention
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/kasten/k10-minimum-retention/k10-minimum-retention.yaml
+++ b/kasten/k10-minimum-retention/k10-minimum-retention.yaml
@@ -65,4 +65,8 @@ spec:
       patchesJson6902: |-
         - path: "/spec/retention"
           op: replace
-          value: {"hourly":24,"daily":30,"weekly":4,"monthly":3}
+          value:
+            hourly: 24
+            daily: 30
+            weekly: 4
+            monthly: 3
