update formatting of Add Tolerations
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/add-tolerations/add-tolerations.yaml
+++ b/other/add-tolerations/add-tolerations.yaml
@@ -31,4 +31,8 @@ spec:
       patchesJson6902: |-
         - op: add
           path: "/spec/tolerations/-"
-          value: {"key":"org.com/role","operator":"Equal","value":"service","effect":"NoSchedule"}
+          value:
+            key: org.com/role
+            operator: Equal
+            value: service
+            effect: NoSchedule
