update formatting for Add Volume to Deployment
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/add-volume-deployment/add-volume-deployment.yaml
+++ b/other/add-volume-deployment/add-volume-deployment.yaml
@@ -25,12 +25,17 @@ spec:
       any:
       - key: "{{request.object.spec.template.metadata.annotations.\"vault.k8s.corp.net/inject\"}}"
         operator: Equals
-        value: "enabled"
+        value: enabled
     mutate:
       patchesJson6902: |-
         - op: add
           path: /spec/template/spec/volumes
-          value: [{"name": "vault-secret","emptyDir": {"medium": "Memory"}}]
+          value:
+          - name: vault-secret
+            emptyDir:
+              medium: Memory
         - op: add
           path: /spec/template/spec/containers/0/volumeMounts
-          value: [{"mountPath": "/secret","name": "vault-secret"}]
+          value:
+          - mountPath: /secret
+            name: vault-secret
