update formatting on Inject Env Var from Image Label
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/inject-env-var-from-image-label/inject-env-var-from-image-label.yaml
+++ b/other/inject-env-var-from-image-label/inject-env-var-from-image-label.yaml
@@ -45,4 +45,6 @@ spec:
         patchesJson6902: |-
           - op: add
             path: "/spec/containers/{{elementIndex}}/env/-"
-            value: {"name":"MAINTAINER","value":"{{maintainer}}"}
+            value:
+              name: MAINTAINER
+              value: "{{maintainer}}"
